# capitalization

./: README.md  capitalization.opam
ppx-configuration/: capitalization_ppx_configuration.ml  capitalization_ppx_configuration.mli  dune
src/: capitalization.ml  capitalization.mli  dune
