opam-version: "2.0"
version: "v0.17.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/capitalization"
bug-reports: "https://github.com/janestreet/capitalization/issues"
dev-repo: "git+https://github.com/janestreet/capitalization.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/capitalization/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"    {>= "5.1.0"}
  "base"     {>= "v0.17" & < "v0.18"}
  "ppx_base" {>= "v0.17" & < "v0.18"}
  "dune"     {>= "3.11.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Defines case conventions and functions to rename identifiers according to them"
description: "
"
